# geofinder

./: .gitlab-ci.yml  CMakeLists.txt  README.md
src/: main.cpp
test/: test-out.json  test.json
